--- a/.github/workflows/add-release.yml
+++ b/.github/workflows/add-release.yml
@@ -23,8 +23,8 @@ jobs:
           body: "Automated release for tag ${{ github.ref_name }}"
           draft: false
           prerelease: false
-      - name: Uplaod
+      - name: Upload
         env:
-          GITHUB_TOKEN:${{secrets.GITHUB_TOKEN}}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run:
-          gh release upload ${{github.ref_name}}./dist/main.exe
+          gh release upload ${{ github.ref_name }} ./dist/main.exe
